--- a/webbdm_verse_of_the_day/Views/Verses/VerseResults.cshtml
+++ b/webbdm_verse_of_the_day/Views/Verses/VerseResults.cshtml
@@ -1,4 +1,6 @@
-﻿<div>
+﻿<a href="/favorites">View My Favorites</a>
+<a href="/verses">Select Verses</a>
+<div>
     @foreach (var verse in ViewBag.verses)
     {
         <form asp-controller="Verses" action="/favorite" method="post">
