--- a/webbdm_verse_of_the_day/Views/Favorites/Favorites.cshtml
+++ b/webbdm_verse_of_the_day/Views/Favorites/Favorites.cshtml
@@ -2,18 +2,32 @@
     ViewData["Title"] = "My Favorites";
 }
 
-<h2>@ViewData["Title"].</h2>
+<head>
+    <style type="text/css">
+        body {
+            background: url('../../Assets/mountains.jpeg') no-repeat center center fixed;
+            background-size: cover;
+        }
+    </style>
+</head>
 
-<a href="/verses">Select Verses</a>
-<div>
-    @foreach (var favoriteVerse in ViewBag.favoriteVerses)
-    {
-        <form asp-controller="Verses" action="/favorite" method="post">
-            <span>
-                <span>@favoriteVerse.Book</span><span>@favoriteVerse.VerseText</span>
-                <input type="hidden" name="id" value=@favoriteVerse.Id />
-                <button type="submit">Remove</button>
-            </span>
-        </form>
-    }
-</div>
+
+
+<body>
+    <h2>@ViewData["Title"].</h2>
+
+    <a href="/verses">Select Verses</a>
+    <div>
+        @foreach (var favoriteVerse in ViewBag.favoriteVerses)
+        {
+            <form asp-controller="Verses" action="/favorite" method="post">
+                <span>
+                    <span>@favoriteVerse.Book</span><span>@favoriteVerse.VerseText</span>
+                    <input type="hidden" name="id" value=@favoriteVerse.Id />
+                    <button type="submit">Remove</button>
+                </span>
+            </form>
+        }
+    </div>
+
+</body>
