--- a/webbdm_verse_of_the_day/Assets/css/styles.css
+++ b/webbdm_verse_of_the_day/Assets/css/styles.css
@@ -1,32 +1,111 @@
-﻿.verse-box {
+﻿body {
+    margin: 0;
+    font-family: 'Didact Gothic', sans-serif;
+}
+
+.navigation {
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
+    min-width: 100%;
+    background-color: rgba(0,0,0,0.2);
+    padding: 20px 0px;
+}
 
+    .navigation .nav-right a {
+        text-decoration: none;
+        color: white;
+        margin: 40px 20px;
+        padding: 5px;
+        font-family: 'Didact Gothic', sans-serif;
+    }
+
+        .navigation .nav-right a:hover {
+            font-weight: bold;
+            padding: 4px;
+            border: 1px solid white;
+            /* border: 1px solid #08acec;*/
+            border-radius: 5px;
+        }
+    
+.verse-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.verse-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-grow: 1;
 }
 
 .verse-panel {
     display: flex;
-    max-width: 450px;
+    max-width: 400px;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    color: white;
+    border: 1px solid white;
+    margin: 20px;
+    border-radius: 5px;
+    background-color: rgba(0,0,0,0.3);
+}
+
+.verse-text {
+    margin: 10px;
+    max-width: 300px;
+}
+
+.favorites-header {
+    text-align: center;
+}
+
+.favorites-wrapper{
+    min-width: 100%;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.favorites-panel {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     border: 1px solid white;
     padding: 10px;
     margin: 20px;
     border-radius: 5px;
+    background-color: rgba(0,0,0,0.3);
 }
 
-.verse-text {
-    max-width: 300px;
+.favorites-box {
+    display: flex;
+    flex-direction: column;
 }
+
 
 img {
-    height: 400px;
-    width: auto;
-    margin: 10px;
+    max-height: 450px;
+    width: 100%;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
 
-button{
+button {
     width: 100px;
+    margin: 10px;
+    padding: 5px;
+    color: white;
+    border: 1px solid #08acec;
+    background-color: #08acec;
+    border-color: #08acec;
+    border-radius: 5px;
+    box-shadow: none;
 }
