--- a/webbdm_verse_of_the_day/Views/Verses/VerseForm.cshtml
+++ b/webbdm_verse_of_the_day/Views/Verses/VerseForm.cshtml
@@ -1,28 +1,21 @@
 ﻿@{
     ViewData["Title"] = "Verses";
+    Layout = "_Layout";
 }
 
-<head>
-    <style type="text/css">
-        body {
-            background: url('../../Assets/mountains.jpeg') no-repeat center center fixed;
-            background-size: cover;
-        }
-    </style>
-</head>
 
-<body>
+<div class="verse-form">
+    <div class="panel">
 
-    <h2>@ViewData["Title"].</h2>
+        <h2>@ViewData["Title"]</h2>
 
-    <p>Verse of The Day</p>
-    <a href="/favorites">View My Favorites</a>
+        <form asp-controller="Verses" asp-action="SendVerse" method="post">
+            <input type="text" name="StartDate" />
+            <input type="number" name="PageSize" />
 
-    <form asp-controller="Verses" asp-action="SendVerse" method="post">
-        <input type="text" name="StartDate" />
-        <input type="number" name="PageSize" />
+            <input type="submit" value="Submit" />
+        </form>
 
-        <input type="submit" value="Submit" />
-    </form>
+    </div>
+</div>
 
-</body>
