--- a/webbdm_verse_of_the_day/Pages/Shared/_Layout.cshtml
+++ b/webbdm_verse_of_the_day/Pages/Shared/_Layout.cshtml
@@ -20,9 +20,13 @@
 </head>
 <body>
     <div class="navigation">
+        <div class="nav-left">
+            <img class="logo" src="../../Assets/klove_logo.png"/>
+        </div>
+        <h1 class="nav-title">Verse of the Day</h1>
         <div class="nav-right">
-            <a href="/favorites">View My Favorites</a>
             <a href="/verses">Select Verses</a>
+            <a href="/favorites">My Favorites</a>
         </div>
     </div>
     <div>
