--- a/webbdm_verse_of_the_day/Pages/Shared/_Layout.cshtml
+++ b/webbdm_verse_of_the_day/Pages/Shared/_Layout.cshtml
@@ -29,8 +29,8 @@
             <a href="/favorites">My Favorites</a>
         </div>
     </div>
-    <div>
+    @*<div>*@
         @RenderBody()
-    </div>
+    @*</div>*@
 </body>
 </html>
