VOD-10 Styling for Favorites page text

--- a/webbdm_verse_of_the_day/Views/Verses/VerseForm.cshtml
+++ b/webbdm_verse_of_the_day/Views/Verses/VerseForm.cshtml
@@ -11,8 +11,8 @@
 
         <form class="verse-form "asp-controller="Verses" asp-action="SendVerse" method="post">
             <div class="verse-form-inputs">
-                <input type="text" name="StartDate" />
-                <input type="number" name="PageSize" />
+                <input placeholder="Start Date" type="text" name="StartDate" />
+                <input placeholder="Number of Verses" type="number" name="PageSize" />
             </div>
 
             <button class="get-verses-btn" type="submit" value="Get Verses">Get Verses</button>
