--- a/webbdm_verse_of_the_day/Views/Verses/VerseResults.cshtml
+++ b/webbdm_verse_of_the_day/Views/Verses/VerseResults.cshtml
@@ -36,7 +36,8 @@
                             versetext: "@verse.VerseText",
                             book: "@verse.Book",
                             chapter: "@verse.Chapter",
-                            image: "@verse.ImageLink"
+                            imageLink: "@verse.ImageLink",
+                            referenceText: "@verse.ReferenceText"
                         })
                     })
                 });
