--- a/webbdm_verse_of_the_day/Assets/css/styles.css
+++ b/webbdm_verse_of_the_day/Assets/css/styles.css
@@ -74,6 +74,10 @@ body {
     justify-content: center;
 }
 
+    .verse-form .verse-form-inputs input {
+        padding: 10px 15px;
+    }
+
 .verse-box {
     display: flex;
     flex-direction: row;
@@ -113,8 +117,18 @@ body {
 }
 
 .favorites-verse-text {
-    margin: 5px;
+    margin: 10px;
     min-width: 100%;
+}
+
+.left-corner-text {
+    font-size: 20px;
+    background-color: #08acec;
+    border: 1px solid #08acec;
+    border-top-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    margin: 0 0 5px -1px;
+    padding: 0.5px 6px 6px 6px;
 }
 
 .favorites-header {
@@ -133,8 +147,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: 1px solid white;
-    padding: 10px;
+    border: 1.5px solid #08acec;
     margin: 20px;
     border-radius: 5px;
     background-color: rgba(0,0,0,0.3);
@@ -152,6 +165,18 @@ body {
             justify-content: flex-start;
         }
 
+    .favorites-panel .favorites-right {
+        display: flex;
+        flex-direction: column;
+        max-width: 30%;
+    }
+
+        .favorites-panel .favorites-right img {
+            min-height: 100%;
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
+            border-bottom-left-radius: 0px;
+        }
 .favorites-box {
     width: 100%;
 /*    display: flex;
