--- a/webbdm_verse_of_the_day/Views/Favorites/Favorites.cshtml
+++ b/webbdm_verse_of_the_day/Views/Favorites/Favorites.cshtml
@@ -12,8 +12,7 @@
                 <div class="favorites-left">
                     @*<form asp-controller="Favorites" action="/unfavorite" method="post">*@
                     <div class="favorites-text">
-                        <span class="favorites-verse-text">@favorite.Verse.Book</span>
-                        <span class="favorites-verse-text">@favorite.Verse.Chapter</span>
+                        <span class="favorites-verse-text left-corner-text">@favorite.Verse.ReferenceText</span>
                         <input type="hidden" name="verseId" value=@favorite.Verse.Id />
                         @*<button type="submit">Remove</button>*@
                     </div>
@@ -22,7 +21,7 @@
                     @*</form>*@
                 </div>
                 <div class="favorites-right">
-                    <img />
+                    <img src="@favorite.Verse.ImageLink"/>
                 </div>
             </div>
 
