--- a/webbdm_verse_of_the_day/Views/Favorites/Favorites.cshtml
+++ b/webbdm_verse_of_the_day/Views/Favorites/Favorites.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "My Favorites";
     Layout = "_Layout";
 }
- <h2 class="favorites-header">@ViewData["Title"].</h2>
+ <h2 class="favorites-header">@ViewData["Title"]</h2>
 
 <div class="favorites-wrapper">
     <div class="favorites-box">
