VOD-10 Change nav item Select Verses to Get Verses

--- a/webbdm_verse_of_the_day/Pages/Shared/_Layout.cshtml
+++ b/webbdm_verse_of_the_day/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
         </div>
         <h1 class="nav-title">Verse of the Day</h1>
         <div class="nav-right">
-            <a href="/verses">Select Verses</a>
+            <a href="/verses">Get Verses</a>
             <a href="/favorites">My Favorites</a>
         </div>
     </div>
