--- a/webbdm_verse_of_the_day/Assets/css/styles.css
+++ b/webbdm_verse_of_the_day/Assets/css/styles.css
@@ -144,11 +144,11 @@ body {
 
 .favorites-verse-text {
     margin: 10px;
-    min-width: 100%;
+    font-size: 26px;
 }
 
 .left-corner-text {
-    font-size: 20px;
+    font-size: 24px;
     background-color: #08acec;
     border: 1px solid #08acec;
     border-top-left-radius: 4px;
@@ -162,7 +162,7 @@ body {
     color: #08acec;
     font-weight: 900;
     margin-left: 20px;
-    font-size: 25px;
+    font-size: 22px;
 }
 
 .favorites-wrapper{
@@ -176,6 +176,7 @@ body {
     color: white;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     border: 1.5px solid #08acec;
     margin: 20px;
@@ -189,7 +190,6 @@ body {
     .favorites-panel .favorites-left {
         display: flex;
         flex-direction: column;
-        width: 50%;
     }
 
         .favorites-panel .favorites-left .favorites-panel-text {
@@ -201,14 +201,14 @@ body {
     .favorites-panel .favorites-right {
         display: flex;
         flex-direction: column;
-        max-width: 40%;
+        flex-wrap: wrap;
     }
 
         .favorites-panel .favorites-right img {
-            min-height: 100%;
             border-top-right-radius: 4px;
             border-bottom-right-radius: 4px;
             border-bottom-left-radius: 0px;
+            max-width: 400px;
         }
 .favorites-box {
     width: 100%;
