--- a/webbdm_verse_of_the_day/Assets/css/styles.css
+++ b/webbdm_verse_of_the_day/Assets/css/styles.css
@@ -98,11 +98,10 @@ body {
 
 
 .verse-box {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    flex-grow: 1;
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
 }
 
 .verse-form-panel{
