VOD-19 User-friendly error handling when unable to connect to Verse of the Day service

--- a/webbdm_verse_of_the_day/Assets/css/styles.css
+++ b/webbdm_verse_of_the_day/Assets/css/styles.css
@@ -115,6 +115,16 @@ body {
     border-top-right-radius: 0;
 }
 
+.verse-panel-error {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+    .verse-panel-error .verse-panel {
+        padding: 50px;
+    } 
+
 .verse-panel {
     display: flex;
     max-width: 400px;
