VOD-19 Require 1 or more verses. VOD API gets caught in a loop when Zero verses are requested

--- a/webbdm_verse_of_the_day/Views/Verses/VerseForm.cshtml
+++ b/webbdm_verse_of_the_day/Views/Verses/VerseForm.cshtml
@@ -12,7 +12,7 @@
         <form class="verse-form "asp-controller="Verses" asp-action="SendVerse" method="post">
             <div class="verse-form-inputs">
                 <input required placeholder="Start Date MM/DD/YY" type="text" name="StartDate" />
-                <input id="numberverses" required placeholder="Number of Verses" type="number" name="PageSize" />
+                <input id="numberverses" required placeholder="Number of Verses" type="number" min="1" name="PageSize" />
             </div>
 
             <button class="get-verses-btn" type="submit" value="Get Verses">Get Verses</button>
