--- a/webbdm_verse_of_the_day/ClientApp/src/custom.css
+++ b/webbdm_verse_of_the_day/ClientApp/src/custom.css
@@ -1,14 +1,302 @@
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+
+html, body {
+    min-height: 100vh;
 }
 
-code {
-  color: #E01A76;
+body {
+    margin: 0;
+    font-family: 'Didact Gothic', sans-serif;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.navigation {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 100%;
+    background-color: rgba(0,0,0,0.2);
+    padding: 0px;
+    margin-bottom: 20px;
+    position: sticky;
+    top: 0;
+    z-index: 999999;
+    backdrop-filter: blur(5px); /* New property, not available in all browsers yet */
+    -webkit-backdrop-filter: blur(5px);
+    -moz-backdrop-filter: blur(5px);
+}
+
+    .navigation .nav-left {
+    }
+
+        .navigation .nav-left .logo {
+            height: 50px;
+            width: auto;
+            margin: 10px 0px 10px 20px;
+        }
+
+    .navigation h1 {
+        color: white;
+        margin-left: 60px;
+    }
+
+    .navigation .nav-right a {
+        text-decoration: none;
+        color: white;
+        margin: 40px 20px;
+        padding: 5px;
+        font-family: 'Didact Gothic', sans-serif;
+    }
+
+        .navigation .nav-right a:hover {
+            font-weight: bold;
+            padding: 4px;
+            border: 1px solid white;
+            /* border: 1px solid #08acec;*/
+            border-radius: 5px;
+        }
+
+.verse-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 100%;
+    margin-top: 10%;
+}
+
+.verse-form {
+    display: flex;
+    flex-direction: column;
+    padding: 50px 100px;
+    max-height: 200px;
+}
+
+    .verse-form .verse-form-inputs {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+        .verse-form .verse-form-inputs input {
+            padding: 10px 15px;
+            border: none;
+            border-top-left-radius: 2px;
+            border-top-right-radius: 2px;
+            border-bottom-left-radius: 0px;
+            border-bottom-right-radius: 0px;
+            margin: 0;
+        }
+
+            .verse-form .verse-form-inputs input:focus {
+                outline: none;
+            }
+
+#numberverses {
+    border-top: 1px solid #08acec;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+
+.verse-box {
+    display: grid;
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+}
+
+.verse-form-panel {
+    max-height: 300px;
+}
+
+.get-verses-btn {
+    width: 100%;
+    margin: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.verse-panel-error {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+    .verse-panel-error .verse-panel {
+        padding: 50px;
+    }
+
+.verse-panel {
+    display: flex;
+    max-width: 400px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    border: 1px solid #08acec;
+    margin: 20px;
+    border-radius: 5px;
+    background-color: rgba(0,0,0,0.3);
+    backdrop-filter: blur(2px); /* New property, not available in all browsers yet */
+    -webkit-backdrop-filter: blur(2px);
+    -moz-backdrop-filter: blur(2px);
+}
+
+.verse-panel-header {
+    text-align: center;
+    margin: 30px 10px;
+}
+
+.verse-text {
+    margin: 10px;
+    max-width: 300px;
+}
+
+.favorites-verse-text {
+    margin: 10px;
+    font-size: 26px;
+}
+
+.left-corner-text {
+    font-size: 24px;
+    background-color: #08acec;
+    border: 1px solid #08acec;
+    border-top-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    margin: 0 0 5px -1px;
+    padding: 0.5px 6px 6px 6px;
+}
+
+.favorites-header {
+    text-align: left;
+    color: #08acec;
+    font-weight: 900;
+    margin-left: 20px;
+    font-size: 22px;
+}
+
+.favorites-wrapper {
+    min-width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.favorites-panel {
+    color: white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border: 1.5px solid #08acec;
+    margin: 20px;
+    border-radius: 5px;
+    background-color: rgba(0,0,0,0.3);
+    backdrop-filter: blur(2px); /* New property, not available in all browsers yet */
+    -webkit-backdrop-filter: blur(2px);
+    -moz-backdrop-filter: blur(2px);
+}
+
+    .favorites-panel .favorites-left {
+        display: flex;
+        flex-direction: column;
+    }
+
+        .favorites-panel .favorites-left .favorites-panel-text {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+        }
+
+    .favorites-panel .favorites-right {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+        .favorites-panel .favorites-right img {
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
+            border-bottom-left-radius: 0px;
+            max-width: 400px;
+        }
+
+.favorites-box {
+    width: 100%;
+}
+
+
+img {
+    max-height: 450px;
+    width: 100%;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+
+button {
+    width: 100px;
+    margin: 10px;
+    padding: 5px;
+    color: white;
+    border: 1px solid #08acec;
+    background-color: #08acec;
+    border-color: #08acec;
+    border-radius: 5px;
+    box-shadow: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .favorites-panel {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+
+        .favorites-panel img {
+            min-height: 100%;
+            min-width: 400px;
+        }
+}
+
+@media screen and (min-width: 414) {
+    .favorites-panel img {
+        min-width: 100%;
+        height: 200px;
+    }
+}
+
+@media screen and (max-width: 475px) {
+    .navigation {
+        flex-direction: column;
+        justify-content: space-around;
+        height: 130px;
+    }
+
+        .navigation .nav-left {
+        }
+
+            .navigation .nav-left .logo {
+            }
+
+        .navigation h1 {
+            display: none;
+            order: 3;
+        }
+
+        .navigation .nav-right a {
+        }
+
+            .navigation .nav-right a:hover {
+            }
+}
+
+@media screen and (max-width: 768px) {
+    .favorites-panel .favorites-right {
+        min-width: 100%;
+    }
+
+    .favorites-panel img {
+        min-width: 100%;
+        min-height: 200px;
+    }
 }
