VOD-18 Scaffold VerseResults component

--- a/webbdm_verse_of_the_day/ClientApp/src/custom.css
+++ b/webbdm_verse_of_the_day/ClientApp/src/custom.css
@@ -6,6 +6,8 @@ html, body {
 body {
     margin: 0;
     font-family: 'Didact Gothic', sans-serif;
+    background: url('./assets/mountains.jpeg') no-repeat center center fixed;
+    background-size: cover;
 }
 
 .navigation {
